iptables.rules
# Generated by iptables-save v1.6.0 on Sat Feb  9 17:49:52 2019
*filter

#FLUSH
-F

#LOOPBACK INTERFACE
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT

#HTTP/HTTPS
-A INPUT -p tcp --dport 80 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp --dport 443 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp --dport 443 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp --sport 80 -m state --state RELATED,ESTABLISHED -j ACCEPT
#SPECIFY RETURN PATH FOR WEB TRAFFIC
-A INPUT -i eth0 -m state --state ESTABLISHED,RELATED -j ACCEPT

#DNS 
-A OUTPUT -p udp --dport 53 -j ACCEPT
-A INPUT -p udp --sport 53 -j ACCEPT

#SSH
-A INPUT -p tcp --dport 22 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT

#PING 
-A INPUT -p icmp --icmp-type echo-reply -j ACCEPT
-A OUTPUT -p icmp --icmp-type echo-request -j ACCEPT

#POLICIES
-P INPUT DROP
-P FORWARD DROP
-P OUTPUT ACCEPT

COMMIT
# Completed on Sat Feb  9 17:49:52 2019
